envoy/authz.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9000
node:
  cluster:
  id: test-id
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: banana
          http_filters:
            - name: envoy.ext_authz
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.http.ext_authz.v2.ExtAuthz
                http_service:
                  server_uri:
                    uri: 127.0.0.1:8080
                    cluster: ext-authz
                    timeout: 0.5s
                  authorization_request:
                    allowed_headers:
                      patterns:
                        prefix: 'x-ztrust-'
            - name: envoy.router
  clusters:
  - name: banana
    connect_timeout: 1s
    type: STRICT_DNS
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 9999
  - name: ext-authz
    connect_timeout: 1s
    type: STRICT_DNS
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 8080
